Fix dark mode headings

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,4 +8,7 @@
     color: #c9d1d9;
     background: #0d1117;
   }
+  h1, h2, h3, h4, h5, h6 {
+  color: #c9d1d9;
+  }
 }
